# ChangeLog for media-sound/wavpack
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-sound/wavpack/ChangeLog,v 1.36 2008/04/20 21:43:29 flameeyes Exp $

*wavpack-4.41.0-r1 (20 Apr 2008)

  20 Apr 2008; Diego Pettenò <flameeyes@gentoo.org>
  +files/wavpack-4.41.0-constant.patch, wavpack-4.41.0.ebuild,
  +wavpack-4.41.0-r1.ebuild:
  Fix building with GCC 4.3, thanks to Peter Alfredsen in bug #217828. Also
  add a new revision with a patch to mark more stuff constant in a new
  revision.

  16 Nov 2007; nixnut <nixnut@gentoo.org> wavpack-4.41.0.ebuild:
  Stable on ppc wrt bug 198823

  16 Nov 2007; Raúl Porcel <armin76@gentoo.org> wavpack-4.41.0.ebuild:
  alpha/ia64 stable wrt #198823

  13 Nov 2007; Ferris McCormick <fmccor@gentoo.org> wavpack-4.41.0.ebuild:
  Stable for sparc, bug #198823

  13 Nov 2007; Markus Rothe <corsair@gentoo.org> wavpack-4.41.0.ebuild:
  Stable on ppc64; bug #198823

  12 Nov 2007; Jeroen Roovers <jer@gentoo.org> wavpack-4.41.0.ebuild:
  Stable for HPPA (bug #198823). Corrected earlier ChangeLog entry.

  11 Nov 2007; Dawid Węgliński <cla@gentoo.org> wavpack-4.41.0.ebuild:
  Stable on x86 (bug #198823)

  11 Nov 2007; Samuli Suominen <drac@gentoo.org> wavpack-4.41.0.ebuild:
  amd64 stable wrt #198823

  16 Jun 2007; Joshua Kinard <kumba@gentoo.org> wavpack-4.40.0.ebuild:
  Stable on mips.

  12 Jun 2007; Diego Pettenò <flameeyes@gentoo.org> wavpack-4.41.0.ebuild:
  Execute elibtoolize for Gentoo/FreeBSD.

*wavpack-4.41.0 (08 Jun 2007)

  08 Jun 2007; Alexis Ballier <aballier@gentoo.org> +wavpack-4.41.0.ebuild:
  version bump

  22 Apr 2007; Bryan Østergaard <kloeri@gentoo.org> wavpack-4.40.0.ebuild:
  Stable on Alpha, bug 174909.

  16 Apr 2007; Raúl Porcel <armin76@gentoo.org> wavpack-4.40.0.ebuild:
  ia64 stable

  10 Apr 2007; Gustavo Zacarias <gustavoz@gentoo.org> wavpack-4.40.0.ebuild:
  Stable on sparc

  28 Mar 2007; Jeroen Roovers <jer@gentoo.org> wavpack-4.40.0.ebuild: