@@ -1,0 +1,38 @@
+# Copyright 1999-2008 Gentoo Foundation
+# Distributed under the terms of the GNU General Public License v2
+# $Header: /var/cvsroot/gentoo-x86/media-sound/wavpack/wavpack-4.50.0.ebuild,v 1.1 2008/06/29 13:30:46 aballier Exp $
+
+EAPI="prefix"
+
+inherit libtool eutils flag-o-matic autotools
+
+DESCRIPTION="WavPack audio compression tools"
+HOMEPAGE="http://www.wavpack.com"
+SRC_URI="http://www.wavpack.com/${P}.tar.bz2"
+
+LICENSE="BSD"
+SLOT="0"
+KEYWORDS="~x86-freebsd ~x86-interix ~amd64-linux ~x86-linux"
+IUSE="mmx"
+
+src_unpack() {
+	unpack ${A}
+	cd "${S}"
+
+	epatch "${FILESDIR}"/${PN}-4.41.0-interix.patch
+	eautoreconf # need new libtool for interix
+
+	elibtoolize
+}
+
+src_compile() {
+	[[ ${CHOST} == *-interix* ]] && append-flags -D_ALL_SOURCE
+
+	econf $(use_enable mmx)
+	emake || die "emake failed."
+}
+
+src_install() {
+	emake DESTDIR="${D}" install || die "emake install failed."
+	dodoc ChangeLog README
+}
