@@ -1,6 +1,11 @@
 # ChangeLog for media-sound/wavpack
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-sound/wavpack/ChangeLog,v 1.36 2008/04/20 21:43:29 flameeyes Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-sound/wavpack/ChangeLog,v 1.37 2008/06/29 13:30:46 aballier Exp $
+
+*wavpack-4.50.0 (29 Jun 2008)
+
+  29 Jun 2008; Alexis Ballier <aballier@gentoo.org> +wavpack-4.50.0.ebuild:
+  version bump, bug #219531
 
 *wavpack-4.41.0-r1 (20 Apr 2008)
 
